--- a/index.html
+++ b/index.html
@@ -1,10 +1,124 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=report.html">
-  <title>Redirecting...</title>
+    <title>Meta-RAG PoC</title>
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
-  <p>If you are not redirected automatically, follow this <a href="report.html">link to the test report</a>.</p>
+    <h1>Meta-RAG PoC</h1>
+
+    <div id="auth-container">
+        <button id="login-button">Login with Google</button>
+    </div>
+
+    <div id="app-container" style="display: none;">
+        <p>Welcome, <span id="user-email"></span>!</p>
+        <button id="logout-button">Logout</button>
+        <hr>
+        <div class="container">
+            <div class="input-area">
+                <h2>Enter a math problem:</h2>
+                <textarea id="problem-input" rows="5" cols="50"></textarea>
+                <br>
+                <button id="solve-button">Solve</button>
+            </div>
+            <div class="output-area">
+                <h2>Generated Thought Process:</h2>
+                <div id="output"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+
+    <script>
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDaUWF5G4mOhHtZ41yPAFv5BE_H1eIF97A",
+            authDomain: "meta-476400.firebaseapp.com",
+            projectId: "meta-476400",
+            storageBucket: "meta-476400.firebasestorage.app",
+            messagingSenderId: "79927702353",
+            appId: "1:79927702353:web:6316995572e9846527d970"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+        const auth = firebase.auth();
+        const provider = new firebase.auth.GoogleAuthProvider();
+
+        const authContainer = document.getElementById("auth-container");
+        const appContainer = document.getElementById("app-container");
+        const loginButton = document.getElementById("login-button");
+        const logoutButton = document.getElementById("logout-button");
+        const userEmailSpan = document.getElementById("user-email");
+        const solveButton = document.getElementById("solve-button");
+        const problemInput = document.getElementById("problem-input");
+        const outputDiv = document.getElementById("output");
+
+        // Handle login state changes
+        auth.onAuthStateChanged(async (user) => {
+            if (user) {
+                // User is signed in
+                authContainer.style.display = "none";
+                appContainer.style.display = "block";
+                userEmailSpan.textContent = user.email;
+            } else {
+                // User is signed out
+                authContainer.style.display = "block";
+                appContainer.style.display = "none";
+            }
+        });
+
+        // Login button click handler
+        loginButton.addEventListener("click", () => {
+            auth.signInWithPopup(provider);
+        });
+
+        // Logout button click handler
+        logoutButton.addEventListener("click", () => {
+            auth.signOut();
+        });
+
+        // Solve button click handler
+        solveButton.addEventListener("click", async () => {
+            const problemText = problemInput.value;
+            const user = auth.currentUser;
+
+            if (!user) {
+                outputDiv.innerHTML = "Please login first.";
+                return;
+            }
+
+            outputDiv.innerHTML = "Solving...";
+
+            try {
+                const idToken = await user.getIdToken();
+
+                const response = await fetch("https://meta-rag-gateway-10puw1u9.an.gateway.dev/chat", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json",
+                        "Authorization": `Bearer ${idToken}`
+                    },
+                    body: JSON.stringify({ problem_text: problemText })
+                });
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+
+                const data = await response.json();
+                outputDiv.innerHTML = data.generated_thought_process;
+
+            } catch (error) {
+                console.error("Error:", error);
+                outputDiv.innerHTML = `Error: ${error.message}`;
+            }
+        });
+    </script>
 </body>
 </html>
